--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,4 +7,10 @@
 
       data: {confirm: "Really delete the article?"} %></p>
 
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+
+<%= render partial: 'comments/form' %>
+<!-- expects form partial to be in "comments" direction -->
+
 <%= link_to "<< Back to Articles List", articles_path %>
